CHG: Fixed icon positioning on home page panels so it aligns with the new header font size. Altered the legacy_styling plugin to revert the change.
git-svn-id: http://svn.montala.net/svn/resourcespace@5027 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/Col-black.css
+++ b/css/Col-black.css
@@ -97,7 +97,7 @@ input[readonly] {color: #FFFFFF;}
 .BasicsBox .VerticalNav li, .ThemeBox li {list-style: url(../gfx/black/interface/bullet.gif) none inside;}
 .ThemeBox {border-bottom: 1px solid #5A7599;}
 
-.HomePanel h2 {background: url(../gfx/black/interface/HomeArrow.gif) no-repeat 1px 5px;}
+.HomePanel h2 {background: url(../gfx/black/interface/HomeArrow.gif) no-repeat 1px 10px;}
 
 .BasicsBox ul, .BasicsBox ol {color:#FFFFFF;}
 
