--- a/css/Col-whitegry.css
+++ b/css/Col-whitegry.css
@@ -99,7 +99,7 @@ input[readonly] {color: #000000;}
 .BasicsBox .HorizontalNav li {border-right:1px solid #B5C3D4;border-top-style: none;border-bottom-style: none;border-left-style: none;}
 .BasicsBox .VerticalNav li, .ThemeBox li {list-style: url(../gfx/whitegry/interface/bullet.gif) none inside;}
 .ThemeBox {border-bottom: 1px solid #BBBBBB;}
-.HomePanel h2 {background: url(../gfx/whitegry/interface/HomeArrow.gif) no-repeat 1px 5px;}
+.HomePanel h2 {background: url(../gfx/whitegry/interface/HomeArrow.gif) no-repeat 1px 10px;}
 
 .highlight {color: #990000;}
 
